wells and wells

--- a/pages/1936.md
+++ b/pages/1936.md
@@ -5,6 +5,6 @@ layout: page
 permalink: /from/1936
 ---
 
-A damning indictment of "droplet theory" (they that arc under gravity) from 85 years ago. Wells & Wells, a husband and wife team:
+Hey, **1935 called and wants its STUPID "droplet theory" back**. You know, droplets arc under gravity toward the deck. The shame of some experts pushing droplets in 2021!
 
 <blockquote class="twitter-tweet"><p lang="en" dir="ltr">A damning indictment of droplet theory from as long as ago.<br><br>1936, Wells &amp; Wells, a husband and wife team.<br><br>Thread. <a href="https://t.co/CHgWKV0Ryt">pic.twitter.com/CHgWKV0Ryt</a></p>&mdash; Jonathan Mesiano-Crookston @/#COVIDisAirborne (@jmcrookston) <a href="https://twitter.com/jmcrookston/status/1299386110070620165?ref_src=twsrc%5Etfw">August 28, 2020</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
