--- a/pages/2022.md
+++ b/pages/2022.md
@@ -4,7 +4,7 @@ nav_order: -1
 layout: page
 ---
 
-A possibility for the world next year....
+A possibility for the world some time next year.
 
 <svg xmlns:dc="http://purl.org/dc/elements/1.1/" xmlns:xl="http://www.w3.org/1999/xlink" version="1.1" xmlns="http://www.w3.org/2000/svg" viewBox="-206.5 -350.5 778 1243" width="778" height="1243">
   <defs>
@@ -359,3 +359,4 @@ A possibility for the world next year....
   </g>
 </svg>
 
+This is a bunch of speculation of course as it is many months away.
